Working GroupMembersOrderer